--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,8 +9,79 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --accent-color: #FF0070;
 }
 
 .theme-dark .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
+  --page-background-color: #000028;
+}
+
+/*Мой код*/
+.theme-dark .header {
+  --header-background-image: url(../images/cover-image-dark.png);
+}
+
+.theme-dark .decorated-zone {
+  --decorated-zone-border: 1px solid #FF0070;
+}
+
+.theme-dark .header__theme-menu-button {
+  --header__theme-menu-button-color: #FF0070;
+}
+
+.theme-dark .header__theme-menu-button_active {
+  --header__theme-menu-button_active-border: 1px solid #FF0070;
+}
+
+.theme-dark .header__theme-menu-button:hover {
+  --header__theme-menu-button-hover-border: 1px solid #FF007066;
+}
+
+.theme-dark .header__theme-menu-button:focus {
+  --header__theme-menu-button-focus-border: 1px solid #FF0070;
+}
+
+.theme-dark .header-footer-text {
+  --header-footer-text-color: #DB00FF;
+}
+
+.theme-dark .description {
+  --description-color: #000028;
+}
+
+.theme-dark .title-decor {
+  --title-decor-background-color: #FF0070;
+}
+
+.theme-dark .intro-text {
+  --intro-text-color: #000028;
+}
+
+.theme-dark .section-title {
+  --section-title-color: #FF0070;
+}
+
+.theme-dark .sub-title {
+  --sub-title-color: #000028;
+}
+
+.theme-dark .text {
+  --text-color: #F1B2CE;
+}
+
+.theme-dark .link:focus {
+  --a-focus-border: 1px solid #F1B2CE;
+}
+
+.theme-dark .sub-heading {
+  --sub-heading-color: #000028;
+}
+
+.theme-dark .footer {
+  --footer-border: 1px solid #FF0070;
+}
+
+.theme-dark .footer-title {
+  --footer-title-color: #DB00FF;
 }
