--- a/styles/style.css
+++ b/styles/style.css
@@ -4,16 +4,18 @@
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
 
   /*Мой код*/
-  background-color: var(--page-background-color);
   margin-bottom: 10px;
+  background-image: var(--page-background-image);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 /*Мой код*/
 
 .header {
   display: grid;
-  margin-bottom: 46px;
-  background-image: var(--header-background-image);
+  margin-bottom: 40px;
   background-size: cover;
 }
 
@@ -40,7 +42,7 @@
 }
 
 .decorated-zone::after {
-  bottom: 4px;
+  bottom: 10px;
   left: 10px;
   border-right: none;
   border-top: none;
@@ -49,46 +51,11 @@
 .header__theme-menu {
   display: grid;
   justify-content: end;
-  margin-bottom: 55px;
+  margin-bottom: 51px;
   margin-top: 76px;
 }
 
-.header__theme-menu-item {
-  padding-bottom: 14px;
-}
-
-.header__theme-menu-button {
-  color: var(--header__theme-menu-button-color);
-  background-color: transparent;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 18px;
-  font-family: 'IBM Plex mono', Regular;
-  border: none;
-  padding-bottom: 1.5px;
-  padding-top: 1.5px;
-  padding-right: 13px;
-  padding-left: 13px;
-  text-transform: lowercase;
-}
-
-.header__theme-menu-button:hover {
-  border: var(--header__theme-menu-button-hover-border);
-}
-
-.header__theme-menu-button:focus {
-  outline: none;
-  border: var(--header__theme-menu-button-focus-border);
-  border-left: none;
-  border-right: none;
-  border-top: none;
-}
-
-.header__theme-menu-button_active {
-  border: var(--header__theme-menu-button_active-border);
-}
-
-.rec{
+.header__rec{
   color: #FF0070;
   text-transform: uppercase;
   font-family: 'IBM Plex mono', Regular;
@@ -104,7 +71,7 @@
   top: 10px;
 }
 
-.rec::after {
+.header__rec::after {
   content: "";
   width: 9px;
   height: 9px;
@@ -113,51 +80,89 @@
   box-shadow: 0 0 4px 2px #FF0070;
 }
 
-.title {
-  margin-bottom: 55px;
- }
-
- .header-footer-text {
-  text-shadow: 4px 4px 0 var(--accent-color);
-  color: var(--header-footer-text-color);
-  font-family: 'IBM Plex mono', Bold;
-  font-size: 116px;
-  font-weight: 700;
-  line-height: 96px;
+.header__theme-menu-item {
+  padding-bottom: 14px;
 }
 
-.description {
-  color: var(--description-color);
+.header__theme-menu-button {
+  color: var(--header-theme-menu-button-color);
+  background-color: transparent;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 18px;
+  font-family: 'IBM Plex mono', Regular;
+  border: none;
+  padding-bottom: 1.5px;
+  padding-top: 1.5px;
+  padding-right: 13px;
+  padding-left: 13px;
+  text-transform: lowercase;
+}
+
+.header__theme-menu-button:hover {
+  border: var(--header-theme-menu-button-hover-border);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+  border: var(--header-theme-menu-button-focus-border);
+  border-left: none;
+  border-right: none;
+  border-top: none;
+}
+
+.header__theme-menu-button_active {
+  border: var(--header-theme-menu-button-active-border);
+}
+
+.header__title {
+  margin-bottom: 50px;
+ }
+
+.main-title {
+  text-shadow: 4px 4px 0 var(--accent-color);
+  color: var(--main-title-color);
+  font-family: 'IBM Plex mono', Bold;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  font-weight: 700;
+  line-height: 83%;
+}
+
+.header__description  {
+  color: var(--header-description-color);
   font-family: 'IBM Plex mono', Bold;
   font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
-  margin-bottom: 59px;
+  margin-bottom: 66px;
 }
 
 .title-decor {
   background-color: var(--title-decor-background-color);
 }
 
-.intro-text {
-  color: var(--intro-text-color);
+.title {
+  color: var(--title-color);
   font-family: 'IBM Plex mono', Bold;
-  font-weight: 700;
   font-size: 18px;
   line-height: 23.4px;
 }
 
-.main {
+.section {
+  margin-bottom: 50px;
+}
+
+.title_intro {
+  font-weight: 700;
+}
+
+.content {
   margin-left: 10px;
   margin-right: 10px;
 }
 
-.section {
-  padding-bottom: 30px;
-}
-
-.section-title {
-  color: var(--section-title-color);
+.block-title {
+  color: var(--block-title-color);
   font-family: 'IBM Plex mono', Bold;
   font-weight: 700;
   font-size: 18px;
@@ -165,12 +170,8 @@
   margin-bottom: 20px;
 }
 
-.sub-title {
-  color: var(--sub-title-color);
-  font-family: 'IBM Plex mono', Bold;
+.title_sub{
   font-weight: 700;
-  font-size: 18px;
-  line-height: 23.4px;
   margin-bottom: 10px;
 }
 
@@ -184,40 +185,43 @@
 }
 
 .link {
-  text-shadow: 4px 4px 0 var(--accent-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
   text-decoration: none;
 }
 
 .link:hover {
   outline: none;
-  text-decoration: underline;
+  border: var(--link-hover-border);
+  border-left: none;
+  border-right: none;
+  border-top: none;
 }
 
 .link:focus {
- outline: none;
-  border: var(--a-focus-border);
+  outline: none;
+  border: var(--link-focus-border);
 }
 
-.title-block {
+.title_item {
   margin-bottom: 20px;
+  font-weight: 700;
 }
 
-.sub-heading {
-  color: var(--sub-heading-color);
-  font-family: 'IBM Plex mono', Regular;
+.title_sub-heading {
   font-weight: 400;
-  font-size: 18px;
-  line-height: 23.4px;
   margin-bottom: 10px;
 }
 
-.content {
-  margin-bottom: 36px;
-  margin-left: 10px;
-  margin-right: 10px;
+.content-gallery {
+  margin-bottom: 28px;
 }
 
-.images {
+.title_gallery {
+  margin-bottom: 10px;
+  font-weight: 700;
+}
+
+.content-gallery__images {
   margin-bottom: 10px;
   width: 355px;
 }
@@ -244,40 +248,18 @@
 
 .footer {
   position: relative;
-  padding-top: 275px;
-  padding-bottom: 276px;
-  margin-left: 10px;
-  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 95vh;
 }
 
-.footer::before,
-.footer::after {
-  position: absolute;
-  content: "";
-  border: var(--footer-border);
-  height: 25px;
-  width: 25.04px;
-}
-
-.footer::before {
-  right: 0;
-  top: 0;
-  border-left: none;
-  border-bottom: none;
-}
-
-.footer::after {
-  bottom: 0;
-  left: 0;
-  border-right: none;
-  border-top: none;
-}
-
-.footer-title {
+.footer__title {
   color: var(--footer-title-color);
   font-weight: 700;
-  font-size: 116px;
-  font-family: 'IBM Plex mono';
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  font-family: 'IBM Plex mono', Bold;
+  text-shadow: 2px 2px 0 var(--accent-color-footer-title);
 }
 
 @media (min-width: 768px) {
@@ -286,7 +268,7 @@
     margin-bottom: 20px;
   }
   .header {
-    margin-bottom: 80px;
+    margin-bottom: 60px;
   }
   .decorated-zone {
     padding-left: 0;
@@ -297,76 +279,71 @@
     top: 20px;
   }
   .decorated-zone::after {
-    bottom: -2px;
+    bottom: 20px;
     left: 20px;
   }
   .header__theme-menu {
     margin-top: 193px;
     margin-bottom: 165px;
   }
-  .rec {
+  .header__rec {
     right: 30px;
     top: 20px;
   }
-  .header-footer-text {
-    font-size: 120px;
-    margin-bottom: 162px;
+  .header__title {
+    margin-bottom: 160px;
   }
-  .description {
+  .header__description {
     width: 364px;
-    margin-bottom: 164px;
-    display: grid;
-    justify-self: end;
-  }
-  .main {
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-  .section {
-    padding-bottom: 60px;
-  }
-  .conclusion {
-    display: grid;
-    grid-auto-flow: column;
-  }
-  .intro {
-    display: grid;
-    grid-auto-flow: column;
-  }
-  .section-title {
-    width: 236px;
-    display: grid;
-  }
-  .section--intro {
-    width: 472px;
-    display: grid;
-    justify-self: end;
-  }
-  .sub-title {
-    margin-bottom: 10px;
-  }
-  .sub-text {
-    margin-bottom: 20px;
-  }
-  .title-block {
-    margin-bottom: 20px;
-  }
-  .section--conclusion {
-    width: 472px;
+    margin-bottom: 180px;
     display: grid;
     justify-self: end;
   }
   .content {
+    margin-top: 60px;
     margin-left: 20px;
     margin-right: 20px;
-    margin-bottom: 74px;
   }
-  .images-container {
+  .section-base {
+    padding-bottom: 2px;
+  }
+  .section-conclusion {
+    display: grid;
+    grid-auto-flow: column;
+  }
+  .section {
+    margin-bottom: 60px;
+  }
+  .section-intro {
+    display: grid;
+    grid-auto-flow: column;
+  }
+  .block-title {
+    width: 236px;
+    display: grid;
+  }
+  .intro__block {
+    width: 472px;
+    display: grid;
+    justify-self: end;
+  }
+  .conclusion__block {
+    width: 472px;
+    display: grid;
+    justify-self: end;
+  }
+  .content-gallery {
+    margin-bottom: 60px;
+  }
+  .title_gallery {
+    margin-bottom: 20px;
+  }
+  .content-gallery__images-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
   }
-  .images {
+  .content-gallery__images {
     display: block;
     width: 100%;
     height: 100%;
@@ -387,119 +364,79 @@
     grid-column: span 2;
   }
   .footer {
-    padding-top: 448px;
-    padding-bottom: 443px;
-    padding-left: 193px;
-    padding-right: 204px;
-    margin-right: 20px;
-    margin-left: 20px;
+    height: 143vh;
   }
 }
 
 @media (min-width: 1024px) {
-  .page {
-    padding: 0;
- }
- .decorated-zone {
-    padding-left: 0;
-    padding-top: 20px;
-    padding-right: 20px;
-}
-  .decorated-zone::before {
-    right: 20px;
-    top: 20px;
-}
+  .decorated-zone {
+    padding-right: 0;
+  }
   .decorated-zone::after {
-    bottom: -2px;
-    left: 20px;
-}
+    bottom: 0;
+  }
   .header__theme-menu {
-    display: grid;
+    display: flex;
+    margin-top: 20px;
+    margin-bottom: 275px;
     justify-content: center;
-    margin-top: 0;
-    margin-bottom: 291px;
-}
+    align-items: center;
+  }
+  .header__title {
+    margin-bottom: 115px;
+  }
   .header__theme-menu-list {
-    display: grid;
-    grid-auto-flow: column;
-}
+    display: flex;
+  }
   .header__theme-menu-item {
     margin-right: 10px;
     padding: 0;
-}
-  .rec {
-    right: 30px;
-    top: 20px;
+  }
+  .header__theme-menu-item:last-child {
     margin: 0;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    position: absolute;
-    right: 30px;
-    top: 20px;
-}
-  .header-footer-text {
-    font-size: 157px;
-    margin-bottom: 129px;
-}
-  .description {
+  }
+  .header__rec {
+    margin: 0;
+  }
+  .header__description {
     width: 491px;
     margin-bottom: 116px;
-}
-  .main {
-    margin-top: 80px;
-    margin-left: 20px;
     margin-right: 20px;
-}
-  .intro {
-    display: grid;
-    grid-auto-flow: column;
-}
-  .section-title {
-    width: 314.96px;
-}
-  .base {
-    display: grid;
-    grid-auto-flow: column;
-    gap: 20px;
-}
-  .section--intro {
-    width: 648.92px;
-}
-  .sub-title {
-    margin-bottom: 10px;
-}
-  .sub-text {
-    margin-bottom: 20px;
-}
-  .section--base {
-    width: 315px;
-}
-  .conclusion {
-    display: grid;
-    grid-auto-flow: column;
-}
-  .section--conclusion {
-    width: 648.92px;
-}
-  .title-block{
-    margin-bottom: 20px;
-}
+  }
   .content {
-    margin-bottom: 80px;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-  .images {
-    padding: 0;
-}
+    margin-top: 80px;
+  }
+  .section {
+    margin-bottom: 60px;
+  }
+  .block-title {
+    width: 314.96px;
+  }
+  .base__block {
+    gap: 19px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .intro__block {
+    width: 648.92px;
+  }
+  .base__card {
+    width: 315px;
+  }
+  .conclusion__block {
+    width: 648.92px;
+  }
+  .title_gallery {
+    margin-bottom: 20px;
+  }
+  .content-gallery {
+    margin-bottom: 65px;
+  }
   .footer {
-    padding-top: 317px;
-    padding-bottom: 317px;
-    padding-left: 257px;
-    padding-right: 263px;
-}
-  .footer-title {
-    font-size: 157px;
-}
+    height: 80vh;
+  }
+  .footer__title {
+    text-shadow: var(--footer-title-text-shadow);
+    text-align: center;
+  }
 }
