--- a/styles/light.css
+++ b/styles/light.css
@@ -9,6 +9,7 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --page-background-image: url(../images/cover-image-light.png);
   --accent-color: #FF8DCB;
   --accent-color-footer-title: #FF8DCB;
   --decorated-zone-border: 1px solid #353430;
@@ -20,18 +21,17 @@
   --header-description-color: #353430;
   --title-decor-background-color: #FF8DCB;
   --header-intro-text-color: #353430;
+  --title-color: #353430;
   --text-color: #353430;
-  --link-hover-border: 2px solid #353430;
+  --link-hover-border: 1.5px solid #353430;
   --link-focus-border: 1px solid #353430;
   --block-title-color: #353430;
   --footer-border: 1px solid #353430;
-  --footer-title-color: #FFC2E6;
   --footer-title-text-shadow: 2px 2px 0px #FF0070;
 }
 
 .theme-light .page {
   /* Вам также нужно будет написать ряд подобных селекторов */
-  --page-background-image: url(../images/cover-image-light.png);
 }
 
 @media (prefers-color-scheme: light) {
@@ -49,16 +49,12 @@
     --title-decor-background-color: #FF8DCB;
     --title-color: #353430;
     --text-color: #353430;
-    --link-hover-border: 2px solid #353430;
+    --link-hover-border: 1.5px solid #353430;
     --link-focus-border: 1px solid #353430;
     --block-title-color: #353430;
     --footer-border: 1px solid #353430;
-    --footer-title-color: #FFC2E6;
     --footer-title-text-shadow: 2px 2px 0px #FF0070;
   }
-}
-
-@media (prefers-color-scheme: light) {
   .header__rec {
     display: none;
   }
